# LocateYourPhoto

./: CMakeLists.txt  README.md  main.py  pyproject.toml  resources.qrc
src/: main.cpp
src/core/: exif_handler.cpp  exif_handler.h  exiftool_writer.cpp  exiftool_writer.h  gps_matcher.cpp  gps_matcher.h  gpx_parser.cpp  gpx_parser.h  photo_processor.cpp  photo_processor.h
src/models/: photo_item.h  photo_list_model.cpp  photo_list_model.h  track_point.h
src/qml/: MapView.qml
src/ui/: file_list_panel.cpp  file_list_panel.h  main_window.cpp  main_window.h  map_panel.cpp  map_panel.h
